--- a/templates/addMedicine.html
+++ b/templates/addMedicine.html
@@ -13,6 +13,10 @@
                 <input type="text" class="input-field" placeholder="Medicine Name..." name="name" required>
             </div>
             <div class="item">
+                <h3 class="label">Generic Medicine Name:</h3>
+                <input type="text" class="input-field" placeholder="Generic Name..." name="generic_name" required>
+            </div>
+            <div class="item">
                 <h3 class="label">Category:</h3>
                 <select class="input-field" name="category">
                     <option value="gm">gm</option>
